Overflow fixes

--- a/css/main.css
+++ b/css/main.css
@@ -510,6 +510,7 @@ html {
 }
 
 #tradition {
+  overflow-x: hidden;
   color: #6d214f;
   position: relative;
   background-color: #f2f3f7;
@@ -1440,6 +1441,7 @@ p.-bttn-container {
 }
 
 #shop {
+  overflow-x: hidden;
   background-color: #6d214f;
   color: #f2f3f7;
   margin-bottom: 5rem;
@@ -1595,6 +1597,31 @@ hr {
 
 #contact-landing .-div-find-store input {
   margin-right: 2vw;
+}
+
+@media (max-width: 992px) {
+  #contact-landing .-div-find-store input {
+    width: 100%;
+    margin-right: 0;
+  }
+}
+
+@media (max-width: 992px) {
+  #contact-landing .-div-find-store button {
+    display: block;
+    margin: auto;
+    margin-top: 2rem;
+  }
+}
+
+#contact-landing .-div-find-store .-form-group {
+  margin: auto;
+}
+
+@media (max-width: 992px) {
+  #contact-landing .-div-find-store .-form-group {
+    width: 100%;
+  }
 }
 
 #contact-landing .-div-find-store h1 {
