--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -18,6 +18,23 @@
     margin: auto;
     input {
       margin-right: 2vw;
+      @media (max-width: 992px) {
+        width: 100%;
+        margin-right: 0;
+      }
+    }
+    button {
+      @media (max-width: 992px) {
+        display: block;
+        margin: auto;
+        margin-top: 2rem;
+      }
+    }
+    .-form-group {
+      @media (max-width: 992px) {
+        width: 100%;
+      }
+      margin: auto;
     }
     h1 {
       @extend %font-normal-bold;
