--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -310,6 +310,7 @@
 }
 
 #tradition {
+  overflow-x: hidden;
   color: $purple;
   position: relative;
   background-color: $white;
