--- a/sass/_shop.scss
+++ b/sass/_shop.scss
@@ -42,6 +42,7 @@
 }
 
 #shop {
+  overflow-x: hidden;
   background-color: $purple;
   color: $white;
   margin-bottom: 5rem;
